<resources>
    <string name="app_name">SweetAnikca2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comentarios</string>
    <string name="Productos">Productos</string>
    <string name="fragment_home_title">Home</string>
    <string name="fragment_profile_title">Mi Perfil</string>
    <string name="fragment_product_detail_title">Detalle del producto</string>
    <string name="app_title">Sweet Anikca</string>
    <string name="app_addres">EL dulce sabor 123</string>
    <string name="app_addres_label">Dirección: </string>
    <string name="app_description_label">"Descripción: "</string>
    <string name="app_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in rep</string>
    <string name="phone_label">"Teléfono: "</string>
    <string name="profile_addres_label">"Dirección: "</string>
    <string name="fragment_login">Inicio de sesión</string>
    <string name="fragment_sign_up">Registro</string>
    <string name="email_label">Email</string>
    <string name="password_label">Contraseña</string>
    <string name="login_button">Iniciar</string>
    <string name="sign_up_label">¿No tienes cuenta?</string>
    <string name="name_label">Nombre de usuario</string>
    <string name="signup_button">Registrar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="add_comment">Agregar comentario</string>
    <string name="edit_comment">Editar comentario</string>
</resources>