<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_password_layot"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/login_email_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_password_layot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@id/login_signup"


        />

    <Button
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/sign_up_label"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"

        />


</androidx.constraintlayout.widget.ConstraintLayout>