<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/dancing_script"
            android:text="@string/app_title"
            android:textSize="@dimen/tittle_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/home_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/default_margin"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title"></com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/home_addres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/dancing_script"
            android:text="@string/app_addres_label"
            android:textSize="@dimen/subtittle_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_image">
        </TextView>

        <TextView
            android:id="@+id/home_addres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/dancing_script"
            android:text="@string/app_addres"
            android:textSize="@dimen/subtittle_size"
            app:layout_constraintLeft_toRightOf="@id/home_addres_label"
            app:layout_constraintTop_toBottomOf="@id/home_image">
        </TextView>

        <TextView
            android:id="@+id/home_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/dancing_script"
            android:text="@string/app_description_label"
            android:textSize="@dimen/subtittle_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_addres_label">
        </TextView>

        <TextView
            android:id="@+id/home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/dancing_script"
            android:text="@string/app_description"
            android:textSize="@dimen/subtittle_size"
            app:layout_constraintLeft_toRightOf="@id/home_description_label"
            app:layout_constraintTop_toBottomOf="@id/home_description_label"
            app:layout_constraintRight_toRightOf="parent">
        </TextView>

        <fragment
            android:id="@+id/home_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_description"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/small_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>